16/01/2024 - 2
==============
Stability fix, write changed to send , handling SIGPIPE, deletion of connection object is done differently


16/01/2024 - 1
==============
Added changes to logging.
Made some fixes wrt to server loop logic that involves skipping write part if there is a read error
Added connection object counter
Script changes to redirect logs to a file 
Log message changes 
REQ and RESP macro added to derefernce connection object versions of the same


15/01/2024 - 2
==============
Adding copyright information 
Adding logging functionality with granularity specification and updating fprintf to debuglog
Making changes to some of the log messages 
Making code file changes to use debuglog instead of fprintf
Making changes to the script file to specify loglevel, default is set to 1 (being lowest)


15/01/2024 - 1
==============
SSL supported added to "origin/sslsupport" branch
Bug fixes for SSL & ipv6 changes.
Code cleanup
Bug fixes for several crashes involving SSL and ipv6
Bug fix for DOS prevention failure withe ipv6 address


14/01/2024 - 2
==============
DOS prevention by using remote ip connection threshold.
Added support for IPv6 server listen socket, now http over IPv6 works.


14/01/2024 - 1
==============
Changes to test scripts so that it runs 100*50 wget requests for 7mb static image and p3 plugin post execution
Changes to server to run in static file server mode, where threadmanager, plugins and dynamic pages are disabled, operates like thttpd mode.
Added testloopplugup.sh for multipart form post test
Added testloop3types.sh for multipart form post test
Made changes to shrink logic, hopefully for the better.
Added logic for connection acceptance throttling, required as static files are handled by mainthread and dynamic pages are handled by thread pool cause much havoc.
Added changes to increase open fds rlimit.


13/01/2024 - 3
==============
Cleanup of makefile
Changes to the paths